# IGEM

./: .gitignore  README.md  gpt2_mmlu_test_results.csv  install_dependencies.sh  nohup.out  out.txt  pyproject.toml  requirements.txt  run_benchmarks.sh  test.py  test_out.txt  todo.txt  verify_running.sh
analysis/: analysis.py  test.py
csvlogs/: eval_results.csv  training_results.csv
debug_results/distributed/: gem_permuted-mnist_mlp.csv  gem_permuted-mnist_mlp_sgem.csv
debug_results/minitest/: agem_permuted-mnist_mlp_agem_n_iter_100.csv  agem_permuted-mnist_mlp_agem_n_iter_2.csv  gem_permuted-mnist_mlp_blr_n_iter_100.csv  gem_permuted-mnist_mlp_gem_1.csv  gem_permuted-mnist_mlp_warm_n_iter_2.csv
debug_results/single/: gem_permuted-mnist_mlp.csv  gem_permuted-mnist_mlp_sgem.csv
eval_results/: gem_permuted-mnist_mlp_gem_n_iter_1.csv  gem_permuted-mnist_mlp_sgem_n_iter_100.csv  gem_permuted-mnist_mlp_warm_n_iter_100.csv
new_files/: agem.py  base_gem.py  gem.py  igem.py  test_.py  todo.txt
new_results/: analysis.ipynb
new_results/debug/: agem_mmlu-cl_gpt2_1.csv  agem_mmlu-cl_gpt2_500.csv  gem_mmlu-cl_gpt2_1.csv  gem_mmlu-cl_gpt2_500.csv  gem_permuted-mnist_mlp_500.csv  igem_mmlu-cl_gpt2_1.csv  igem_mmlu-cl_gpt2_500.csv
new_results/full/: gem_cifar100_resnet18_1.csv  gem_cifar100_resnet18_100.csv  gem_cifar100_resnet18_25.csv  gem_cifar100_resnet18_50.csv  gem_cifar100_resnet18_500.csv  gem_mmlu-cl_gpt2_1.csv  gem_mmlu-cl_gpt2_100.csv  (+8 more)
new_src/: config.yaml  main.py  run_benchmarks.sh  runner.py  todos.txt  verify_running.sh
src/: main.py
(+222 files in other folders)
