[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sgem"
version = "0.1.0"
description = "Gradient Episodic Memory with Stochastic Gradient Descent"
readme = "README.md"
requires-python = ">=3.8"
authors = [
  { name="Emre Tekmen", email="betekmen@uncg.edu"},
  { name="Jason Yin", email="j_yin@uncg.edu"}
]
license = { text="MIT" }

dependencies = [
  "avalanche-lib>=0.6.0"
]

[tool.setuptools.packages.find]
where = ["src"]
